--- a/style.css
+++ b/style.css
@@ -9,4 +9,8 @@ body {
     top: 0;
     left: 0;
     z-index: -1;
+    background: linear-gradient(to top, #008aff, #00ffe7);
+  }
+  h1{
+    color: #00ffe7;
   }
